--- a/Sentry_Nav/param/costmap_common_params.yaml
+++ b/Sentry_Nav/param/costmap_common_params.yaml
@@ -16,4 +16,5 @@ map_type: costmap
 #导航包所需要的传感器
 observation_sources: scan
 #对传感器的坐标系和数据进行配置。这个也会用于代价地图添加和清除障碍物。例如，你可以用激光雷达传感器用于在代价地图添加障碍物，再添加kinect用于导航和清除障碍物。
-scan: {sensor_frame: laser, data_type: LaserScan, topic: /scan, marking: true, clearing: true}
+#sensor_frame should be your own frame in tftree
+scan: {sensor_frame: body, data_type: LaserScan, topic: /scan, marking: true, clearing: true}
