update coordinate mapping from 3d to 2d

--- a/sentry_nav/CMakeLists.txt
+++ b/sentry_nav/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  tf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -134,6 +135,8 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/sentry_nav_node.cpp)
+add_executable(trans_tF_2d src/Trans_TF_2d.cpp)
+
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -150,6 +153,9 @@ include_directories(
 #   ${catkin_LIBRARIES}
 # )
 
+target_link_libraries(trans_tF_2d
+  ${catkin_LIBRARIES}
+)
 #############
 ## Install ##
 #############
