finish the coordinate mapping from 3d to 2d

--- a/sentry_nav/param/costmap_common_params.yaml
+++ b/sentry_nav/param/costmap_common_params.yaml
@@ -17,4 +17,4 @@ map_type: costmap
 observation_sources: scan
 #对传感器的坐标系和数据进行配置。这个也会用于代价地图添加和清除障碍物。例如，你可以用激光雷达传感器用于在代价地图添加障碍物，再添加kinect用于导航和清除障碍物。
 #sensor_frame should be your own frame in tftree
-scan: {sensor_frame: body, data_type: LaserScan, topic: /scan, marking: true, clearing: true}
+scan: {sensor_frame: body_2d, data_type: LaserScan, topic: /scan, marking: true, clearing: true}
