--- a/sentry_nav/param/local_costmap_params.yaml
+++ b/sentry_nav/param/local_costmap_params.yaml
@@ -1,6 +1,6 @@
 local_costmap:
   global_frame: camera_init #里程计坐标系
-  robot_base_frame: body #机器人坐标系
+  robot_base_frame: body_2d #机器人坐标系
  
   update_frequency: 10.0 #代价地图更新频率
   publish_frequency: 10.0 #代价地图的发布频率
