finish dwa_planner and generate y velocity correctly

--- a/sentry_nav/CMakeLists.txt
+++ b/sentry_nav/CMakeLists.txt
@@ -135,8 +135,9 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/sentry_nav_node.cpp)
-add_executable(trans_tF_2d src/Trans_TF_2d.cpp)
-
+add_executable(trans_tf_2d src/Trans_TF_2d.cpp)
+add_executable(trans_tf_2d_odom src/Trans_TF_2d_odom.cpp)
+add_executable(trans_odom_2d src/Trans_odom_2d.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -153,7 +154,13 @@ add_executable(trans_tF_2d src/Trans_TF_2d.cpp)
 #   ${catkin_LIBRARIES}
 # )
 
-target_link_libraries(trans_tF_2d
+target_link_libraries(trans_tf_2d
+  ${catkin_LIBRARIES}
+)
+target_link_libraries(trans_tf_2d_odom
+  ${catkin_LIBRARIES}
+)
+target_link_libraries(trans_odom_2d
   ${catkin_LIBRARIES}
 )
 #############
