update the decision in random mode

--- a/sentry_decision/CMakeLists.txt
+++ b/sentry_decision/CMakeLists.txt
@@ -134,6 +134,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/sentry_decision_node.cpp)
+add_executable(random_deci src/random_deci.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -149,6 +150,10 @@ include_directories(
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
+target_link_libraries(random_deci
+  ${catkin_LIBRARIES}
+)
+
 
 #############
 ## Install ##
