modified code for inverting lidar

--- a/sentry_nav/param/global_costmap_params.yaml
+++ b/sentry_nav/param/global_costmap_params.yaml
@@ -1,5 +1,5 @@
 global_costmap:
-  global_frame: map #地图坐标系
+  global_frame: robot_foot_init #地图坐标系
   robot_base_frame: body_foot #机器人坐标系
   # 以此实现坐标变换
  
